syntax = "proto3"; //Specify proto3 version.

package order;

service Order {
  rpc createOrder (ReqOrder) returns (OrderId);
  rpc addProduct (ReqAddProduct) returns (ResOrder);
  rpc getOrder (OrderId) returns (ResOrder);
}

message ReqOrder {
  bool payed = 1;
  int32 user = 2;
}

message OrderId {Â 
  int32 id = 1;
}

message ResOrder {
  int32 id = 1;
  bool payed = 2;
  int32 userId = 3;
  double totally = 4;
}


message ReqAddProduct {
  int32 idOrder = 1;
  int32 idProduct = 2;
}

message OrderProduct {
  int32 idOrder = 1;
  int32 idProduct = 2;
}